# fastapi-tutorial

./: .gitignore  Makefile  README.py.md  alembic.ini  main.py  pyproject.toml  readme.md
alembic/: env.py
alembic/versions/: a74dfd1776e8_init.py  e88c0a5d57c3_init.py
api/v1/users/: __init__.py  users.py
app/: container.py  server.py
app/controllers/: auth.py
app/models/: user.py
app/repositories/: user.py
app/schemas/extras/: current_user.py
app/schemas/requests/: users.py
app/schemas/responses/: users.py
app/user/adapter/input/api/v1/: user.py
app/user/adapter/input/api/v1/request/: __init__.py
app/user/adapter/output/: repository_adapter.py
app/user/adapter/output/persistence/sqlalchemy/: user.py
app/user/application/dto/: __init__.py
app/user/application/service/: user.py
app/user/domain/entity/: user.py
app/user/domain/repository/: __init__.py
app/user/domain/usecase/: user.py
core/: config.py  server.py
core/cache/: cache_manager.py  custom_key_maker.py  redis_backend.py
core/cache/base/: backend.py
core/controller/: base.py
core/database/: __init__.py  session.py  transactionl.py
core/db/: __init__.py  session.py  transactionl.py
core/exceptions/: __init__.py  base.py
core/factory/: factory.py
core/fastapi/dependencies/: logging.py
core/fastapi/middlewares/: __init__.py  authentication.py
core/repository/: base.py
core/security/: jwt.py  password.py
docker/: docker-compose.yaml  init.sql
routers/: todo_router.py
