[tool.poetry]
name = "fastapi-tutorial"
version = "0.1.0"
description = ""
authors = ["carlos <zengqiang96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.30.1"
fastapi = "^0.111.0"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
