[tool.poetry]
name = "fastapi-tutorial"
version = "0.1.0"
description = ""
authors = ["carlos <zengqiang96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.30.1"
fastapi = "^0.111.0"
click = "^8.1.7"
pydantic-settings = "^2.3.3"
dependency-injector = "^4.41.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
aiomysql = "^0.2.0"
pymysql = "^1.1.1"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
