[tool.poetry]
name = "fastapi-tutorial"
version = "0.1.0"
description = ""
authors = ["carlos <zengqiang96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.30.1"
fastapi = "^0.111.0"
click = "^8.1.7"
pydantic-settings = "^2.3.3"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
aiomysql = "^0.2.0"
pymysql = "^1.1.1"
alembic = "^1.13.1"
passlib = "^1.7.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
bcrypt = "^4.1.3"
redis = "^5.0.6"
ujson = "^5.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
